# ls2.0

./: CMakeLists.txt  Makefile  check_args.c  ft_ls.h  main.c  print_dir.c  scan.c  scan_utilities.c  scan_utilities.h
dir_utilities/: dir_add.c  dir_getend.c  dir_list_size.c  dir_list_swap.c  dir_new.c  dir_utilities.h  free_dir_list.c  sort_dir_list.c
dir_utilities/file_utilities/: file_add.c  file_list_size.c  file_list_swap.c  file_new.c  file_size.c  file_utilities.h  free_files.c  sort_file_list.c
lib/: Makefile  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lst_n.c  ft_lstadd.c  ft_lstaddend.c  ft_lstaddn.c  ft_lstdel.c  ft_lstdelh.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_lstswap.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putspace.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  (+27 more)
